tests/paczka1/small_fuzzy/51166416.err
Error in line 1: lGIwADxblPE S368 33,4
Error in line 3: 4AGKLt A516 18,4
Error in line 11: lGIwADxblPE A464 23,2
Error in line 12: lGIwADxblPE S588 97,5
